Fix Account Management page - Required section name is not visible

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -315,6 +315,16 @@ button {
         }
     }
 
+    h1::before, h2::before {
+        @include maxBreakpoint($breakpoint-tablet) {
+            display: block;
+            content: ' ';
+            height: 80px; 
+            margin-top: -80px;
+            visibility: hidden;
+        }
+    }
+
     .article {
         img {
             display: block;
